2022-09-24T16:04:50Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3118937866
* notice: last 14d: unq all: 5 5625
* notice: prev accum: outdated-unq outdated-all / unq all: 1050 63692 / 1090 69338
* notice: next accum: outdated-unq outdated-all / unq all: 1050 63692 / 1091 69317
* notice: prev exec diff / last date diff / accum: unq all: +1 +123 -0 -144 / +2 +260 -0 -0 / 2 260
* notice: removed / changed dates: [] / [2022-09-10 2022-09-24]

2022-09-24T08:07:32Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3117593892
* notice: last 14d: unq all: 5 5646
* notice: prev accum: outdated-unq outdated-all / unq all: 1050 63692 / 1089 69375
* notice: next accum: outdated-unq outdated-all / unq all: 1050 63692 / 1090 69338
* notice: prev exec diff / last date diff / accum: unq all: +1 +139 -0 -176 / +1 +137 -0 -0 / 1 137
* notice: removed / changed dates: [] / [2022-09-10 2022-09-23 2022-09-24]

2022-09-24T00:38:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3116461403
* notice: last 14d: unq all: 5 5683
* notice: prev accum: outdated-unq outdated-all / unq all: 1044 63308 / 1084 68927
* notice: next accum: outdated-unq outdated-all / unq all: 1050 63692 / 1089 69375
* notice: prev exec diff / last date diff / accum: unq all: +0 +147 -0 -21 / +3 +405 -0 -0 / 3 405
* notice: removed / changed dates: [2022-09-09] / [2022-09-10 2022-09-23]

2022-09-23T16:08:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3114093911
* notice: last 14d: unq all: 5 5619
* notice: prev accum: outdated-unq outdated-all / unq all: 1044 63308 / 1085 68942
* notice: next accum: outdated-unq outdated-all / unq all: 1044 63308 / 1084 68927
* notice: prev exec diff / last date diff / accum: unq all: +0 +120 -1 -135 / +3 +258 -0 -0 / 3 258