@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-12T08:10:25Z",
-  "count" : 400,
+  "timestamp" : "2022-09-25T00:33:39Z",
+  "count" : 381,
   "count_minmax" : [ 134, 400 ],
-  "count_decinc" : [ -0, +400 ],
+  "count_decinc" : [ -19, +400 ],
   "uniques" : 3,
   "uniques_minmax" : [ 2, 3 ],
   "uniques_decinc" : [ -0, +3 ]
