@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-24T16:04:50Z",
-  "count" : 260,
-  "count_minmax" : [ 137, 260 ],
-  "count_decinc" : [ -0, +260 ],
+  "timestamp" : "2022-09-25T00:33:39Z",
+  "count" : 408,
+  "count_minmax" : [ 137, 408 ],
+  "count_decinc" : [ -0, +408 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
