@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-09-24T16:04:50Z",
-  "count_outdated" : 63692,
-  "uniques_outdated" : 1050,
-  "count" : 69317,
+  "timestamp" : "2022-09-25T00:33:39Z",
+  "count_outdated" : 64100,
+  "uniques_outdated" : 1052,
+  "count" : 69787,
   "uniques" : 1091,
   "clones" : [
     {
-      "timestamp": "2022-09-10T00:00:00Z",
-      "count": 67,
-      "count_minmax": [ 67, 408 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
-    {
       "timestamp": "2022-09-11T00:00:00Z",
-      "count": 400,
+      "count": 381,
       "count_minmax": [ 134, 400 ],
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-24T00:00:00Z",
-      "count": 260,
-      "count_minmax": [ 137, 260 ],
+      "count": 408,
+      "count_minmax": [ 137, 408 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
