@@ -1,15 +1,10 @@
 {
-  "count": 5625,
+  "count": 5687,
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-09-10T00:00:00Z",
-      "count": 67,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-09-11T00:00:00Z",
-      "count": 400,
+      "count": 381,
       "uniques": 3
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-09-24T00:00:00Z",
-      "count": 260,
+      "count": 408,
       "uniques": 2
     }
   ]
