@@ -1,3 +1,11 @@
+2022-09-25T00:33:39Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3120339089
+* notice: last 14d: unq all: 5 5687
+* notice: prev accum: outdated-unq outdated-all / unq all: 1050 63692 / 1091 69317
+* notice: next accum: outdated-unq outdated-all / unq all: 1052 64100 / 1091 69787
+* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -19 / +2 +408 -0 -0 / 2 408
+* notice: removed / changed dates: [2022-09-10] / [2022-09-11 2022-09-24]
+
 2022-09-24T16:04:50Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3118937866
 * notice: last 14d: unq all: 5 5625
